welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: not found: value nbBagels
	 	if(nbBagels < 3) {
                   ^Poucet:10: error: not found: value nbBagels
	 	nbBagels = 0;
                ^Poucet:14: error: not found: value nbBagels
	 	nbBagels += 1;
                ^