welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBagles = 0;
do {
	 if(croisement()) {
	 	if(nbBagels < 3) {
	 		droite();
	 	}
	 	else {
	 		gauche();
	 	}
	 	nbBagels = 0;
	 }
	 avance();
	 if(estSurBiscuit()) {
	 	nbBagels += 1;
	 }
} while(!sortieTrouvee())
avance();